--- a/rubywarrior/fritz-beginner/README
+++ b/rubywarrior/fritz-beginner/README
@@ -1,19 +1,40 @@
-Level 2
+Level 9
 
-It is too dark to see anything, but you smell sludge nearby.
+Time to hone your skills and apply all of the abilities that you have learned.
 
-Tip: Use warrior.feel.empty? to see if there is anything in front of you, and warrior.attack! to fight it. Remember, you can only do one action (ending in !) per turn.
+Tip: Watch your back.
 
- --------
-|@   s  >|
- --------
+ -----------
+|>Ca  @ S wC|
+ -----------
 
   > = Stairs
   @ = Fritz (20 HP)
-  s = Sludge (12 HP)
+  C = Captive (1 HP)
+  a = Archer (7 HP)
+  S = Thick Sludge (24 HP)
+  w = Wizard (3 HP)
 
 
 Warrior Abilities:
+
+  warrior.look
+    Returns an array of up to three Spaces in the given direction (forward by default).
+
+  warrior.shoot!
+    Shoot your bow & arrow in given direction (forward by default).
+
+  warrior.pivot!
+    Rotate :left, :right or :backward (default)
+
+  warrior.rescue!
+    Rescue a captive from his chains (earning 20 points) in given direction (forward by default).
+
+  warrior.health
+    Returns an integer representing your health.
+
+  warrior.rest!
+    Gain 10% of max health back, but do nothing more.
 
   warrior.feel
     Returns a Space for the given direction (forward by default).
